# 420-401_AL_H15_TPS

./: CMakeLists.txt  README.md  sprites.qrc  valgrind.supp
aliens/: alien.cpp  alien.h  alienEpoe.cpp  alienEpoe.h  alienOg.cpp  alienOg.h  alienRemote.cpp  alienRemote.h  alienSmart.cpp  alienSmart.h  alienUqomua.cpp  alienUqomua.h  alienYuhq.cpp  alienYuhq.h  aliens.h  intelligent_alien.cpp  intelligent_alien.h
client/: client.cpp  client.h  clientprotocol.cpp  clientprotocol.h  simul_client.cpp
server/: server.cpp  server.h  simul_server.cpp
src/: constants.cpp  constants.h  game.cpp  game.h  gui.cpp  gui.h  map.cpp  map.h
